# aoc2020

./: Cargo.toml  README.md
day1/: Cargo.toml
day1/src/: main.rs  part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: lib.rs  part1.rs  part2.rs
day11/: Cargo.toml
day11/src/: lib.rs  part1.rs  part2.rs
day12/: Cargo.toml
day12/src/: lib.rs  part1.rs  part2.rs
day13/: Cargo.toml
day13/src/: part1.rs  part2.rs
day14/: Cargo.toml
day14/src/: lib.rs  part1.rs  part2.rs
day15/: Cargo.toml
day15/src/: lib.rs  part1.rs  part2.rs
day16/: Cargo.toml
day16/src/: lib.rs  part1.rs  part2.rs
day17/: Cargo.toml
day17/src/: lib.rs  part1.rs  part2.rs
day18/: Cargo.toml
day18/src/: lib.rs  part1.rs  part2.rs
day19/: Cargo.toml  test_input_part1.txt
day19/src/: lib.rs  part1.rs  part2.rs
day2/: Cargo.toml
day2/src/: lib.rs  part1.rs  part2.rs
day20/: Cargo.toml
day20/src/: lib.rs  part1.rs  part2.rs
day21/: Cargo.toml
day21/src/: lib.rs  part1.rs  part2.rs
day22/: Cargo.toml
day22/src/: lib.rs  part1.rs  part2.rs
day23/: Cargo.toml
day23/src/: lib.rs  part1.rs  part2.rs
day24/: Cargo.toml
day24/src/: lib.rs  part1.rs  part2.rs
day25/: Cargo.toml
day25/src/: lib.rs  part1.rs
day3/: Cargo.toml
day3/src/: lib.rs  part1.rs  part2.rs
day4/: Cargo.toml
day4/src/: Part1.rs  Part2.rs  lib.rs
day5/: Cargo.toml
day5/src/: lib.rs  main.rs  part1.rs  part2.rs
day6/: Cargo.toml
day6/src/: lib.rs  part1.rs  part2.rs
day7/: Cargo.toml
day7/src/: lib.rs  part1.rs  part2.rs
day8/: Cargo.toml
day8/src/: lib.rs  part1.rs  part2.rs
day9/: Cargo.toml
day9/src/: lib.rs  part1.rs  part2.rs
utils/: Cargo.toml
utils/src/: lib.rs
