[package]
name = "day12"
version = "0.1.0"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day12part1"
path = "src/part1.rs"
[[bin]]
name = "day12part2"
path = "src/part2.rs"

[dependencies]
utils = { path = "../utils" }
