[package]
name = "day24"
version = "0.1.0"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day24part1"
path = "src/part1.rs"
[[bin]]
name = "day24part2"
path = "src/part2.rs"

[dependencies]
utils = { path = "../utils" }
nom = "6.0"
lazy_static = "1.4"
smallvec = "1.5"