[package]
name = "day8"
version = "0.1.0"
authors = ["Markus Ineichen <kusi.ineichen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day8part1"
path = "src/main.rs"

[dependencies]
utils = { path = "../utils" }
thiserror = "1.0"

